--- a/frontend/src/css/dialog.css
+++ b/frontend/src/css/dialog.css
@@ -1,39 +1,32 @@
-
-dialog {
-  color: inherit;
-  z-index: 100;
-  padding: 0;
-}
-
-dialog.main {
-  border: solid 2px var(--primary-color-muted);
-  border-radius: 4px;
-  margin: 0;
+.dialog-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-dialog.main>div {
+.dialog-container>dialog {
+  padding: 0;
+  margin: auto;
+  border-radius: 4px;
+  border: solid 2px var(--primary-color);
+  color: inherit;
+}
+
+.dialog-container>dialog>div {
   margin: 20px;
 }
 
-dialog.main h2 {
+.dialog-container>dialog>h2 {
   padding: 15px 10px;
   margin: 0;
   border-radius: 2px 2px 0 0;
   text-align: center;
   color: var(--secondary-color);
   background-color: var(--primary-color);
-}
-
-.dialog-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(140, 140, 140, 0.5);
-  z-index: 99;
 }
